syntax = "proto3";

package nftmeta.v1.orderitem;

option go_package = "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/orderitem";
import "web3eye/web3eye.proto";
import "web3eye/basetype/v1/chain.proto";


service Manager {
  rpc CreateOrderItem(CreateOrderItemRequest) returns (CreateOrderItemResponse) {}
  rpc CreateOrderItems(CreateOrderItemsRequest)
      returns (CreateOrderItemsResponse) {}
  rpc UpdateOrderItem(UpdateOrderItemRequest) returns (UpdateOrderItemResponse) {}
  rpc GetOrderItem(GetOrderItemRequest) returns (GetOrderItemResponse) {}
  rpc GetOrderItemOnly(GetOrderItemOnlyRequest)
      returns (GetOrderItemOnlyResponse) {}
  rpc GetOrderItems(GetOrderItemsRequest) returns (GetOrderItemsResponse) {}
  rpc ExistOrderItem(ExistOrderItemRequest) returns (ExistOrderItemResponse) {}
  rpc ExistOrderItemConds(ExistOrderItemCondsRequest)
      returns (ExistOrderItemCondsResponse) {}
  rpc CountOrderItems(CountOrderItemsRequest) returns (CountOrderItemsResponse) {}
  rpc DeleteOrderItem(DeleteOrderItemRequest) returns (DeleteOrderItemResponse) {}
}

message OrderItemReq {
  optional string ID = 10;
  optional string Contract = 20;
  optional string TokenType = 30;
  optional string TokenID = 40;
  optional uint64 Amount = 50;
  optional uint32 PortionNum = 60;
  optional string Remark = 70;
}

message OrderItem {
  string ID = 10;
  string Contract = 20;
  string TokenType = 30;
  string TokenID = 40;
  uint64 Amount = 50;
  uint32 PortionNum = 60;
  string Remark = 70;
}

message Conds {
  web3eye.StringVal ID = 10;
  web3eye.StringVal Contract = 20;
  web3eye.StringVal TokenType = 30;
  web3eye.StringVal TokenID = 40;
  web3eye.Uint64Val Amount = 50;
  web3eye.Uint32Val PortionNum = 60;
  web3eye.StringVal Remark = 70;
  web3eye.StringSliceVal IDs = 150;
}

message CreateOrderItemRequest { OrderItemReq Info = 10; }
message CreateOrderItemResponse { OrderItem Info = 10; }


message CreateOrderItemsRequest { repeated OrderItemReq Infos = 10; }
message CreateOrderItemsResponse { repeated OrderItem Infos = 10; }

message GetOrderItemRequest { string ID = 10; }
message GetOrderItemResponse { OrderItem Info = 10; }

message GetOrderItemsRequest {
  Conds Conds = 10;
  int32 Offset = 20;
  int32 Limit = 30;
}

message GetOrderItemsResponse {
  repeated OrderItem Infos = 10;
  uint32 Total = 20;
}

message GetOrderItemOnlyRequest { Conds Conds = 10; }
message GetOrderItemOnlyResponse { OrderItem Info = 10; }

message UpdateOrderItemRequest { OrderItemReq Info = 10; }
message UpdateOrderItemResponse { OrderItem Info = 10; }

message ExistOrderItemRequest { string ID = 10; }
message ExistOrderItemResponse { bool Exist = 10; }

message ExistOrderItemCondsRequest { Conds Conds = 10; }
message ExistOrderItemCondsResponse { bool Exist = 10; }

message CountOrderItemsRequest { Conds Conds = 10; }
message CountOrderItemsResponse { uint32 Info = 10; }

message DeleteOrderItemRequest { string ID = 10; }
message DeleteOrderItemResponse { OrderItem Info = 10; }
